--- a/styles/main.scss
+++ b/styles/main.scss
@@ -129,14 +129,25 @@
     font-size: 16px;
     color: #d4d4d4;
   }
-  
-  // body {
-  //   background: url('/images/background/back.jpg') repeat-y center center;
-  // }
+
   
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
+  }
+
+  ::-webkit-scrollbar {
+    width: 6px;
+
+  }
+
+  ::-webkit-scrollbar-track {
+  background: #1d1e20;
+  }
+
+  ::-webkit-scrollbar-thumb {
+  background: rgb(72, 69, 80);
+  
   }
 
   @keyframes fade{
